第二课完结

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -2,6 +2,10 @@
 
 [toc]
 
+人間は恋と革命のために生まれて来たのだ
+
+にんげん　は　こい　と　かくめい 　の　ため　に　まなれ　て　きたのだ
+
 ## 书本介绍
 
 ### 书本结构
@@ -408,23 +412,29 @@
 
 ##### ２．誰ですか／何ですか
 
-##### ３．この／その／あの
+##### ３．「名」の「名」
 
-##### ４．どれ／どの
+- 所属
+- 性质、内容
+- 产地、来源
+- 准体、助词
+
+![image-20201126210046395](新标准日本语学习笔记-ミカ先生.assets/image-20201126210046395.png)
+
+##### ４．この／その／あの　
+
+| これ   | それ   | あれ   | どれ   | mine |
+| ------ | ------ | ------ | ------ | ---- |
+| この～ | その～ | あの～ | どの～ | my   |
+
+- この車は　日本製です
+- これは　日本製の車です
+
+##### ５．どれ／どの
+
+
 
 ### 第三课
-
-
-
-
-
-
-
-#### 用の的情况
-
-![image-20201126210046395](新标准日本语学习笔记.assets/image-20201126210046395.png)
-
-
 
 ![image-20201123204233810](新标准日本语学习笔记.assets/image-20201123204233810.png)
 
