第四课完结

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -388,7 +388,7 @@
 
 ### 第二课
 
-#### 单词
+#### 単語｜たんご
 
 - ノート
 - 手帳
@@ -408,11 +408,11 @@
 
 #### 语法解释
 
-##### 1．これ／それ／あれ　は　「名」です
+##### 1．これ／それ／あれ　は　～です
 
 ##### ２．誰ですか／何ですか
 
-##### ３．「名」の「名」
+##### ３．～の～
 
 - 所属
 - 性质、内容
@@ -436,78 +436,307 @@
 
 ### 第三课
 
+#### 単語｜たんご
+
+| デパート       | デジカメ                 |
+| -------------- | ------------------------ |
+| 食堂           | 国                       |
+| 郵便局         | 地図                     |
+| 銀行           | 隣                       |
+| 図書館         | 周辺                     |
+| マンション     | 今日                     |
+| ホテル         | 水曜日                   |
+| コンビニ       | 木曜日                   |
+| 喫茶店         | ここ                     |
+| 病院           | そこ                     |
+| 本屋           | あそこ                   |
+| レストラン     | こちら                   |
+| ビル           | そちら                   |
+| 建物           | あちら                   |
+| 売り場         | どこ                     |
+| トイレ         | だちら                   |
+| 入口           | あのう                   |
+| 事務所         | 上海                     |
+| 受付           | 東京                     |
+| バーゲン会場   | いくら                   |
+| エスタレーター | お～／～階／～円／～曜日 |
+| 服             |                          |
+| コート         |                          |
+
+![image-20201126223514905](新标准日本语学习笔记-ミカ先生.assets/image-20201126223514905.png)
+
+#### 语法解释
+
+##### １．ここ／そこ／あそこ
+
+##### ２．～は　～です
+
+病院はここです
+
+そこは病院です
+
+##### ３．～は　どこですか
+
+郵便局はどこですか
+
+##### ４．～も　～です
+
+和は用法一样主语是谁就放谁后面。
+
+- 李さんは会社員です。小野さんも会社員です
+- 李さんは学生ではありません。李さんは先生でもありません。
+
+两个も表示：～都～
+
+- 吉田さんも森さんも日本人です。
+- 吉田さんも森さんも会社員ではありません。
+
+##### ５．～は　～ですか、～ですか
+
+选择疑问句，选前还是选后。
+
+选一个问题肯定作为答案。
+
+- これは一ですか、七ですか。
+- それはタブレッド（tablet手写面板，平板）ですか、携帯（けいたい）ですか。
+- そのかばんは四千元（げん）ですか、四千円ですか。
+
+##### ６．～は　いくらですか
+
+
+
+#### 表达及词语讲解
+
+##### １．一階
+
+| 1階　いっかい        | 6階　ろっかい       |
+| -------------------- | ------------------- |
+| 2階　にかい          | 7階　ななかい       |
+| 3階　さんかい        | 8階　はち／はっかい |
+| 4階　よんかい        | 9階　きゅうかい     |
+| 5階　ごかい          | 10階　じゅかい      |
+| 16階　じゅうろっかい | 20階　にじゅうかい  |
+
+何階　なんがい　なんかい
+
+
+
+横　よこ　并排的旁边，有一定距离
+
+隣　となり　紧挨着，没有距离
+
+隔壁的隔壁　となりのとなり
+
+##### ２．谓语的省略
+
+##### ３．礼貌语言
+
+1. ##### こちら／そちら／あちら／どちら
+
+   1. 方向，这边、那边：
+      - こちらへどうぞ
+   2. 人：
+      - こちらはマイク・ミラーさんです
+   3. 礼貌形式：
+      - お国はどちらですか
+      - ご出身（しゅっしん）はどちらですか
+   4. 二选一，（我你）哪一边：
+      - こちらこそ　よろしく
+
+2. ##### お国は　どちらですか。会社は　何方ですか
+
+##### ４．缩略词
+
+##### ５．あのう
+
+##### ６．～ですか
+
+
+
 ![image-20201123204233810](新标准日本语学习笔记.assets/image-20201123204233810.png)
 
 ### 第四课
 
-#### 楼梯电梯
+#### 単語｜たんご
 
-![image-20201126223514905](新标准日本语学习笔记.assets/image-20201126223514905.png)
-
-
-
-何階
-
-#### 这儿那儿,这边那边
-
-![image-20201127094825812](新标准日本语学习笔记.assets/image-20201127094825812.png)
-
-　
-
-#### も的用法
-
-![image-20201127101547614](新标准日本语学习笔记.assets/image-20201127101547614.png)
-
-
-
-#### 选择疑问句
-
-A　は　Bですか，Cですか。
-
-いえ＝House
-
-うち＝Home
-
-かぞく＝Family
-
-居間＝Living Room
-
-
+| 部屋                                          | 中                     |
+| --------------------------------------------- | ---------------------- |
+| 庭                                            | 下                     |
+| 家　いえ（House）｜うち（Home）家族（Family） | 前                     |
+| 居間　いま②（Living　Room）                   | 後ろ                   |
+| 冷蔵庫                                        | 近く                   |
+| 壁                                            | 場所                   |
+| スイッチ                                      | 教室                   |
+| 本棚                                          | 会議室                 |
+| ベッド                                        | 図書室                 |
+| 猫                                            | 公園                   |
+| 犬　ペットです(Pet)                           | 花屋                   |
+| 箱                                            | 売店                   |
+| 眼鏡                                          | 駅                     |
+| ビデオ                                        | 地下鉄　地下室　ちか～ |
+| サッカーボール                                | 木                     |
+| ビール                                        | 一人暮らし             |
+| ウイスキー                                    | あります               |
+| 子供                                          | います                 |
+| 兄弟                                          | 横浜                   |
+| 両親                                          | 名古屋                 |
+| 妹                                            | 大阪                   |
+| 男                                            | ジェーアール           |
+| 女                                            | ご～                   |
+| 生徒                                          | ええと                 |
+| 上                                            |                        |
+| 外                                            |                        |
 
 #### 具体方位词
 
-![image-20201127105857683](新标准日本语学习笔记.assets/image-20201127105857683.png)
+| 上　うえ   | 下　した     |
+| ---------- | ------------ |
+| 前　まえ   | 後ろ　うしろ |
+| 左　ひだり | 右　みぎ     |
+| 中　なか   | 外　そと     |
+| 隣　となり | 横　よこ     |
+| 間　あいだ | 近く　ちかく |
 
+- 机の下　ドアの後ろ　冷蔵庫の中　家の中
+- AとBの間：
+  - 辞書は車の雑誌と日本語の本の間です
 
+#### 文法｜ぶんぽう
 
-#### にが　はに存在句
+##### １．場所に　物が　います／あります
 
-A　は　Bです。
+- 地点	有	物
 
-![image-20201127140133730](新标准日本语学习笔记.assets/image-20201127140133730.png)
+あります：无自由行动意志的，比如植物、非生物等。
 
-![image-20201127161417404](新标准日本语学习笔记.assets/image-20201127161417404.png)
+います：有自由行动意志的，比如人、动物等。
 
-#### と并列句
+に：存在的地点
 
-<img src="新标准日本语学习笔记.assets/image-20201127211945660.png" alt="image-20201127211945660" style="zoom: 67%;" />
+が：主语，存在的主体
 
-#### も 也
+> 部屋に　机と　椅子が　あります。
 
-<img src="新标准日本语学习笔记.assets/image-20201128094045959.png" alt="image-20201128094045959" style="zoom:67%;" />
+- かばんは　ノートと　本が　あります。ペンが　ありません。
+- 冷蔵庫に　肉と　魚が　あります。野菜が　全然ありません。
+- 学校に　食堂が　ありますか。
+- （学校に）食堂が　あります。でも　あまり　おいしくないです。
 
+> 机の上に　猫が　います。
 
+- 椅子の下に　犬が　います。
+- 部屋に　誰が　いますか。だれも　いません。
+- あの池に　魚が　いません。
 
-#### 完全否定句
+> 机に　ねこがいます、靴もあります。
 
-<img src="新标准日本语学习笔记.assets/image-20201127212257354.png" alt="image-20201127212257354" style="zoom:67%;" />
+有生命，无生命分开说。
 
-#### ご お的用法
+##### ２．～が　います／あります
+
+> 兄弟が　いますか。
+>
+> 彼女が　いませんよ。
+>
+> 日本人の　友達が　いますか。
+>
+> お金が　ありません。
+>
+> 仕事が　ありません。
+>
+> 
+>
+> 時間・用事・・約束が　あります。
+>
+> 車が　あります。　いいえ、ありません。
+>
+> 家が　ありますか。　いいえ、家もありません。
+>
+> 車も　ありません、家も　ありません。
+>
+> 車も家もありません。
+
+省略地点
+
+##### ３．物は　場所に　います／あります
+
+- 物	在	地点
+
+は：主题，存在的主体
+
+に：存在的地点
+
+> 売店は　駅の　外に　あります。
+
+- メガネは　本棚の上に　ありません。
+- 鍵は　かばんに　あります。
+- 図書館は　どこに　ありますか。
+  - あのビルの　隣に　あります。
+  - あのビルの　隣です。
+
+##### ４．人・物は　場所に　います
+
+> 吉田さんは　庭に　います。
+
+- 森さんは　事務室に　いますか。
+- いいえ、会社に　いません。
+- 犬は　部屋に　いません。庭に　います。
+- 先生は　教室に　いますか、事務室に　いますか。
+
+##### ５．～が～／～に～
+
+図書館があります。　図書館にあります。
+
+学校に図書館があります。　辞書は図書館にあります。
+
+車がありません。　車にありません。
+
+##### ６．疑问词做主语时　は→が
+
+誰が部屋にいますか。＝部屋に誰がいますか。（助词相同，句子相同。常用后面的）
+
+誰が吉田課長ですか。
+
+##### ７．～と～
+
+と：并列，列举关系，每个词后面都有と，最后一个会隐藏。
+
+- 本とノート（と）　ノートと本（と）
+- かばんに本とノート（と）があります。
+
+AとB　の間（あいだ）在A和B之间
+
+- 本屋は銀行とコンビニの間あります。
+
+- 本屋は銀行コンビニの間です。
+
+##### ８．疑问词+　も　+动词（否定）
+
+- 庭に何もありません。
+- 部屋に誰もいません。
+
+##### ９．ご お的用法
 
 1. お后加训读(日语读音+中国汉字) = 您的 
 2. ご后加音读(中文读音+中文汉字) = 您的
 
-![image-20201129143855783](新标准日本语学习笔记.assets/image-20201129143855783.png)
+
+
+#### 表达及词语讲解
+
+##### １．上 所表达的范围
+
+##### ２．ええと
+
+##### ３．ご家族　ご兄弟　ご両親　
+
+##### ４．兄弟
+
+##### ５．ジェーアール　地下鉄
+
+##### ６．一人暮らし
+
+
 
 ## 第二单元
 
