第一单元复习

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -402,8 +402,17 @@
 
 #### 亲属称呼
 
-![image-20201123204132769](新标准日本语学习笔记-ミカ先生.assets/image-20201123204132769.png)
+| 自己的亲属                 | 别人的亲属 | 自己的亲属                         | 别人的亲属 |
+| -------------------------- | ---------- | ---------------------------------- | ---------- |
+| 祖父／外祖父　祖父（そふ） | おじいさん | 兄弟／兄弟姐妹　兄弟（きょうだい） | ご兄弟     |
+| 祖母／外祖母　祖母（そぼ） | おばあさん | 哥哥　兄（あに）                   | お兄さん   |
+| 父母　両親（りょうしん）   | ご両親     | 姐姐　姉（あね）                   | お姉さん   |
+| 父亲　父（ちち）           | お父さん   | 弟弟　弟（おとうと）               | 弟さん     |
+| 母亲　母（はは）           | お母さん   | 妹妹　妹（いもうと）               | 妹さん     |
+| 儿子　息子（むすこ）       | 息子さん   | 伯伯／叔叔／舅舅／姑父　おじ       | おじさん   |
+| 女儿　娘（むすめ）         | 娘さん     | 伯母／婶婶／姑姑／舅妈　おば       | おばさん   |
 
+- 直接称呼自己的亲属时，如“お父さん”“ババ（爸爸）”等，有多种多样的称谓。但称呼弟弟或妹妹时，一般直呼其名。
 - 描述我亲属用左边不加敬语, 称呼或者描述别人的亲属时都要敬语
 
 #### 语法解释
@@ -652,7 +661,7 @@
 >
 > 家が　ありますか。　いいえ、家もありません。
 >
-> 車も　ありません、家も　ありません。
+> 車も　ありません。家も　ありません。
 >
 > 車も家もありません。
 
@@ -712,8 +721,8 @@ AとB　の間（あいだ）在A和B之间
 
 ##### ８．疑问词+　も　+动词（否定）
 
-- 庭に何もありません。
-- 部屋に誰もいません。
+- 庭に何もありません。院子里什么也没有。
+- 部屋に誰もいません。房间里一个人也没有。
 
 ##### ９．ご お的用法
 
@@ -736,7 +745,9 @@ AとB　の間（あいだ）在A和B之间
 
 ##### ６．一人暮らし
 
+##### ７．なに／なん
 
+か　が　も　前読む（よむ）なに、其余的读　なん
 
 ## 第二单元
 
@@ -749,6 +760,8 @@ AとB　の間（あいだ）在A和B之间
 #### 日期-时间-星期
 
 ##### 时间 星期
+
+～時（じ）　～午前（ごぜん）　～午後（ごご）
 
 ![image-20201123204359995](新标准日本语学习笔记.assets/image-20201123204359995.png)
 
