--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -4,6 +4,8 @@
 
 人間は恋と革命のために生まれて来たのだ
 
+人間は恋と革命のために生まれて来たのだ
+
 にんげん　は　こい　と　かくめい 　の　ため　に　まなれ　て　きたのだ
 
 ## 书本介绍
@@ -754,8 +756,6 @@ AとB　の間（あいだ）在A和B之间
 ## 第二单元
 
 ### 第五课 森先生7点起床
-
-
 
 
 
