增加第五章单词

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -759,6 +759,36 @@ AとB　の間（あいだ）在A和B之间
 
 #### 単語｜たんご
 
+| いま（今）           | がっこう（学校）                           |
+| -------------------- | ------------------------------------------ |
+| せんしゅう（先週）   | しけん（試験）                             |
+| らいしゅう（来週）   | しごと（仕事）                             |
+| こんしゅう（今週）   | ちこく（遅刻）                             |
+| きのうう（昨日）     | やすみ（休み）                             |
+| あした（明日）       | しゅっちょう（出張）                       |
+| あさって             | けんしゅう（研修）                         |
+| おととい             | りょこう（旅行）                           |
+| まいにち（毎日）     | てんらんかい（展覧会）                     |
+| まいあさ（毎朝）     | かんげいかい（歓迎会）                     |
+| まいばん（毎晩）     | パーティー                                 |
+| まいしゅう（毎週）   | おたく（お宅）                             |
+| ごぜん（午前）       | いつ（何時）                               |
+| ごご（午後）         | やすみます（休みます）                     |
+| にちようび（日曜日） | はたらきます（働きます）                   |
+| げつようび（月曜日） | はじまります（始まります）                 |
+| かようび（火曜日）   | おわります（終わります）                   |
+| きんようび（金曜日） | おきます（起きます）                       |
+| どようび（土曜日）   | ねます（寝ます）                           |
+| けさ（今朝）         | べんきょうします（勉強します）             |
+| こんばん（今晩）     | いつも                                     |
+| らいねん（来年）     | ぺきんししゃ（北京支社）                   |
+| きょねん（去年）     | おはよう                                   |
+| よる（夜）           | ～時／～分／～半／～月／～日／～年／～ごろ |
+| ばん（晩）           |                                            |
+| あさ（朝）           |                                            |
+
+
+
 #### 文法｜ぶんぽう
 
 #### 表达及词语讲解
