完善第一课和第二课内容

--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -229,7 +229,7 @@
    1. ①单词的第一个音节和第二个音节的音高一定不同。**第一个音节低，则第二个就高，第个音节高，则第二个就低**。
    2. ②一个单词的声调中，或**没有下降，或只有一处下降**。
 
-   下面介绍名词声调的四种类型。由于后续助词时有些词声调下降，而有些不下降，所以，以后续助词“力”为例加以说明。
+   下面介绍名词声调的四种类型。由于后续助词时有些词声调下降，而有些不下降，所以，以后续助词“か”为例加以说明。
 
    ![image-20201120152809155](新标准日本语学习笔记.assets/image-20201120152809155.png)
 
@@ -252,6 +252,8 @@
 ## 第一单元
 
 课件制作老师: 早道日语 迷加老师
+
+输入日语小写时先输入L（l），可切换大小写
 
 ### 背单词的方法：
 
@@ -304,7 +306,7 @@
 
 - A　は　Bでは（じゃ）　ありません
   - では（否定，不是...）　ありません
-  - じゃ　ありません
+  - じゃ　ありません（じゃない）
 
 ##### 用例｜ようれい
 
@@ -374,6 +376,8 @@
 
 数数用后面的读音
 
+0 ゼロ（れい）
+
 | 一（いち） | 二（に）         | 三（さん） | 四（し　よん）   | 五（ご）     |
 | ---------- | ---------------- | ---------- | ---------------- | ------------ |
 | 六（ろく） | 七（しち　なな） | 八（はち） | 九（く　きゅう） | 十（じゅう） |
@@ -381,6 +385,8 @@
 零到一百读音
 
 ![image-20201123204108097](新标准日本语学习笔记-ミカ先生.assets/image-20201123204108097.png)
+
+与时间挂钩的读第一个读音，7点、9点、7月、9月
 
 一百以上读音
 
@@ -423,6 +429,10 @@
 
 ##### ２．誰ですか／何ですか
 
+- これは何ですか。这是什么？
+- それは何の雑誌ですか。那是什么杂志？
+- 日本語の辞書はどれですか。日语字典是哪个？
+
 ##### ３．～の～
 
 - 所属
@@ -432,7 +442,7 @@
 
 ![image-20201126210046395](新标准日本语学习笔记-ミカ先生.assets/image-20201126210046395.png)
 
-##### ４．この／その／あの　
+##### ４．この／その／あの　~は　～です
 
 | これ   | それ   | あれ   | どれ   | mine |
 | ------ | ------ | ------ | ------ | ---- |
@@ -443,7 +453,29 @@
 
 ##### ５．どれ／どの
 
+- 日本語の辞書はどの辞書ですか。
+  - にほんのじしょはどれですか。
+- 旅行の雑誌はどの雑誌ですか。
+  - 旅行の雑誌はどれですか。
 
+#### 表达及词语讲解
+
+##### １．～かた（方）
+
+##### ２．询问年龄
+
+- ～おいくつですか。
+- ～何歳ですか。
+
+##### ３．どうぞ
+
+##### ４．叹词
+
+##### ５．はい　&　～ええ
+
+##### ６．外来词
+
+##### ７．どうも
 
 ### 第三课 这里是百货商店
 
