增加到第七课内容

--- a/唐盾从零到N2.md
+++ b/唐盾从零到N2.md
@@ -73,3 +73,14 @@
 | 礼儀　れいぎ   | どなたですか。   |
 | 尊敬　そんけい | どちら様ですか。 |
 
+### 动词变形
+
+一类动词：词尾在第3段（5段）
+二类动词：
+最后一个假名必须是
+且倒数第二个假名在第2段
+或第4段（化1段元段）
+
+
+
+时间点有动词才加　に
