--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -871,6 +871,17 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201129150126175](新标准日本语学习笔记.assets/image-20201129150126175.png)
 
+に：表示方向，目的。
+
+- 表示物体存在的地点和空间。
+- 表示动作发生的时间点。
+
+大部分时候可以和へ互换。
+
+- 私たちは秋葉原に行きます。我们会去秋叶原。
+- 君はいつ日本に来ますか。你什么时候来日本？
+- 温泉に行きますか。去泡温泉吗。（表示目的，只能用に）
+
 #### から 时间\空间的起点
 
 ![image-20201129150509909](新标准日本语学习笔记.assets/image-20201129150509909.png)
@@ -881,9 +892,15 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201129151012058](新标准日本语学习笔记.assets/image-20201129151012058.png)
 
+接在人物名词后面，和某人一起
+
+- 昨日はクラスメートと映画に行きました。
+
 #### で　方式\方法
 
 ![image-20201129151943192](新标准日本语学习笔记.assets/image-20201129151943192.png)
+
+
 
 #### 动词变形规律
 
@@ -902,6 +919,10 @@ AとB　の間（あいだ）在A和B之间
 #### で　动作发生的场所
 
 ![image-20201201193559582](新标准日本语学习笔记.assets/image-20201201193559582.png)
+
+- 映画に行きます。目的
+- 東京へ行きます。方向
+- 教室で勉強します。动作发生地点
 
 #### か　选择\或者
 
