--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -932,6 +932,12 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201201200049806](新标准日本语学习笔记.assets/image-20201201200049806.png)
 
+#### ください
+
+わずかでいい　ぼくにあいおください。
+
+- 哪怕一点点也好，请给我你的爱。--日本人也不懂的日语
+
 #### 动词变形规律
 
 ![image-20201201212730246](新标准日本语学习笔记.assets/image-20201201212730246.png)
@@ -959,6 +965,10 @@ AとB　の間（あいだ）在A和B之间
 #### に　动作方向的对象
 
 ![image-20201201220736936](新标准日本语学习笔记.assets/image-20201201220736936.png)
+
+- 先生に会います。见老师。（以人为对象用に）
+
+如果对象不是个人，而是集团、地点时，也可以使用「へ」或者「から」
 
 ![image-20201201232408837](新标准日本语学习笔记.assets/image-20201201232408837.png)
 
@@ -1072,7 +1082,7 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201205174819625](新标准日本语学习笔记.assets/image-20201205174819625.png)
 
-#### 2.～ほう　～更
+#### 2.～ほうが　～更
 
 ほうが 固定搭配
 
