--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -249,11 +249,21 @@
 
 
 
-## 第一单元
-
 课件制作老师: 早道日语 迷加老师
 
 输入日语小写时先输入L（l），可切换大小写
+
+每阶段固定时间
+
+单词 25分钟
+
+语法+阅读 50分钟
+
+听力 30分钟
+
+alt+~切换字母和日语输入
+
+## 初级上
 
 ### 背单词的方法：
 
@@ -785,8 +795,6 @@ AとB　の間（あいだ）在A和B之间
 
 
 
-## 第二单元
-
 ### 第五课 森先生7点起床
 
 #### 単語｜たんご
@@ -996,8 +1004,6 @@ AとB　の間（あいだ）在A和B之间
 
 日剧《结不上婚的男人》
 
-## 第三单元
-
 ### 第九课 四川料理很辣
 
 #### 1.一类形容词否定\肯定\过去式
@@ -1108,11 +1114,12 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201205210720518](新标准日本语学习笔记.assets/image-20201205210720518.png)
 
+- 
+- 寿司は日本料理で一番おいしいです。
+
 #### 6.形容词名称的不同叫法
 
 ![image-20201205220117709](新标准日本语学习笔记.assets/image-20201205220117709.png)
-
-## 第四单元
 
 ### 第十三课 桌子上有三本书
 
@@ -1161,6 +1168,8 @@ AとB　の間（あいだ）在A和B之间
 ～ごろ: 时间点左右, 多点儿
 
 ### 第十四课 昨天去商场买东西了
+
+#### 単語｜たんご
 
 #### 1.て形 动词变形
 
@@ -1284,7 +1293,7 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201212204329106](新标准日本语学习笔记.assets/image-20201212204329106.png)
 
-## 第五单元
+第五单元
 
 ### 第十七课 我想有套新西服
 
@@ -1463,7 +1472,7 @@ sone when
 
 ![image-20201214222340996](新标准日本语学习笔记.assets/image-20201214222340996.png)
 
-## 第六单元
+第六单元
 
 ### 第二十一课 我吃过日式牛肉火锅
 
@@ -1823,7 +1832,7 @@ sone when
 
 ### 总复习三: N5模拟题
 
-## 第七单元
+第七单元
 
 ### 第二十五课 这是明天会议要用的资料
 
@@ -1881,7 +1890,7 @@ sone when
 
 
 
-## 第八单元
+第八单元
 
 ### 第二十九课 关灯!
 
@@ -1931,7 +1940,7 @@ sone when
 
 
 
-## 第九单元 
+第九单元 
 
 ### 第三十三课 电车突然停了
 
@@ -1981,7 +1990,7 @@ sone when
 
 
 
-## 第十单元
+第十单元
 
 ### 第三十七课 如果获胜, 就能够参加奥运会
 
@@ -2031,7 +2040,7 @@ sone when
 
 
 
-## 第十一单元 
+第十一单元 
 
 ### 第四十一课 小李受到部长表扬
 
@@ -2081,7 +2090,7 @@ sone when
 
 
 
-## 第十二单元
+第十二单元
 
 ### 第四十五课 孩子减少现象日益加剧, 日本人口将会越来越少
 
@@ -2131,47 +2140,13 @@ sone when
 
 
 
+## 初级下
 
 
 
+## 中级上
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-每阶段固定时间
-
-单词 25分钟
-
-语法+阅读 50分钟
-
-听力 30分钟
-
-
-
-alt+~切换字母和日语输入
 
 ## 日语语法 附录
 
@@ -2405,3 +2380,4 @@ alt+~切换字母和日语输入
   72中午进考场前
   继续看《最好考前做过这些题》
 
+ 
