--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1171,6 +1171,24 @@ AとB　の間（あいだ）在A和B之间
 
 #### 単語｜たんご
 
+出ます
+
+- 表示从哪里出发
+  - **从大学毕业**：大学を出ます
+  - 从公司出去：会社を出ます
+
+出かけます
+
+1. 表示外出
+   - 去新宿
+     - 新宿へ出かけます
+     - 新宿へ行きます
+2. 可以单独使用
+   - 今天不会出门
+     - 今日は出かけません
+
+
+
 #### 1.て形 动词变形
 
 二类动词词尾通常在 e 段
@@ -1182,6 +1200,11 @@ AとB　の間（あいだ）在A和B之间
 #### 2.～て、～て、～　强调动作先后顺序
 
 ![image-20201211154357018](新标准日本语学习笔记.assets/image-20201211154357018.png)
+
+吃完饭去看了电影。
+
+- 食事をして、映画を見に行きました。
+- ご飯を食べで、映画を見に行きました。
 
 #### 3.～てから、～　动作前后紧密联系
 
@@ -1834,6 +1857,10 @@ sone when
 
 第七单元
 
+
+
+## 初级下
+
 ### 第二十五课 这是明天会议要用的资料
 
 #### 1.连体修饰-定语从句
@@ -2137,10 +2164,6 @@ sone when
 #### 3.
 
 #### 4.
-
-
-
-## 初级下
 
 
 
