--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1236,6 +1236,22 @@ AとB　の間（あいだ）在A和B之间
 
 ### 第十五课 小野女士现正正在看报纸
 
+#### 単語｜たんご
+
+坐船去。（动词表达，强调手段）
+
+- ボートで行きます。
+
+坐船。（词组表达，强调动作）
+
+- ぼーとに乗ります。
+
+坐着船去。
+
+- ぼーとにのって行きます。
+
+気を使います　用心
+
 #### 1.～て　います　进行时
 
 ![image-20201211204802387](新标准日本语学习笔记.assets/image-20201211204802387.png)
