--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1342,6 +1342,13 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201212215356738](新标准日本语学习笔记.assets/image-20201212215356738.png)
 
+用于第三人称：
+
+- 補充：人は事を**欲しがっています**。
+  - ほしい→欲しがる→欲しがって
+- 奈奈想要一个玩偶。
+  - 奈奈ちゃんは人形を欲しがっています。
+
 ![image-20201212215418518](新标准日本语学习笔记.assets/image-20201212215418518.png)
 
 #### 2.～たい　想要做
@@ -1354,15 +1361,23 @@ AとB　の間（あいだ）在A和B之间
 
 ![image-20201212221801388](新标准日本语学习笔记.assets/image-20201212221801388.png)
 
+用于第三人称：
+
+- 補充：说话主语为第三人称时一般用**たがる**。
+- 鈴木さんは海外旅行に行き**たがる**。
+  - 行き**たがって**います。
+
 ![image-20201212222144917](新标准日本语学习笔记.assets/image-20201212222144917.png)
 
 #### 3.～ませんか　～ましょう　邀请/提议
 
 ![image-20201212223328567](新标准日本语学习笔记.assets/image-20201212223328567.png)
 
-#### 
+
 
 ### 第十八课 手机变小了
+
+![image-20230521172611738](%E6%96%B0%E6%A0%87%E5%87%86%E6%97%A5%E6%9C%AC%E8%AF%AD%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0-%E3%83%9F%E3%82%AB%E5%85%88%E7%94%9F.assets/image-20230521172611738.png)
 
 #### 1.～く/ に　なります　变得/成为
 
@@ -1373,6 +1388,14 @@ AとB　の間（あいだ）在A和B之间
 ![image-20201213145331246](新标准日本语学习笔记.assets/image-20201213145331246.png)
 
 ![image-20201213150102145](新标准日本语学习笔记.assets/image-20201213150102145.png)
+
+名を名になります。名词和形容动词一样要在之后加助词に。
+
+这时名词多为时间或身份名词。
+
+- もうすぐ五月になります。马上就要5月/5点了。
+- 来年社会人になります。明年我就要成为社会的一员了。
+- 来年父になります。明年就要成为父亲了。
 
 #### 2.～く/ に　します　使~变得/决定
 
@@ -1385,6 +1408,13 @@ AとB　の間（あいだ）在A和B之间
 ![image-20201213152533169](新标准日本语学习笔记.assets/image-20201213152533169.png)
 
 ![image-20201213154940996](新标准日本语学习笔记.assets/image-20201213154940996.png)
+
+名を名にします。表示名词的主动变化，用法同形容动词，常用到宾格助词を，可以翻译为“把某物做某动作”。
+
+- 時計を九時にしました。把表调到了9点。
+- パーチイーをにぎやかにします。把派对变得热热闹闹的。
+- 息子を音楽家にします。我要把儿子培养成音乐家。
+  
 
 #### 3.他动词和自动词
 
