--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1445,6 +1445,7 @@ AとB　の間（あいだ）在A和B之间
   - 缩略体/口语体: **なきや**
 - 同 **~ないと　いけません**;  ~ないと
   - 口语: **ないと**
+- 同 だめです
 
 ![image-20201213203741098](新标准日本语学习笔记.assets/image-20201213203741098.png)
 
@@ -1469,6 +1470,25 @@ AとB　の間（あいだ）在A和B之间
 #### 1.动词变形规律总结
 
 ![image-20201213225108018](新标准日本语学习笔记.assets/image-20201213225108018.png)
+
+1. 一类动词（五段动词）
+   - 特征：词尾在**う段**（3段）
+   - 变形：
+     - 词尾在**う段　→　い段+ます**
+     - 词尾在３段　→　２段+ます
+2. 二类动词（一段动词）
+   - 特征：
+     - 词尾在**い段\え段+る**
+     - 词尾在在**２段\４段+る**
+   - 变形：
+     - 去**る+ます**
+3. 三类动词（变格动词）
+   - 特征：
+     - サ变动词：する
+     - カカ变动词：来る
+   - 变形：
+     - する　→　します
+     - 来る　→　来ます
 
 #### 2.～ことが　できます　可能/能/会
 
