--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1641,7 +1641,37 @@ sone when
 
 #### 4.口语表达
 
-![image-20201215212342647](新标准日本语学习笔记.assets/image-20201215212342647.png)![image-20201215213026445](新标准日本语学习笔记.assets/image-20201215213026445.png)![image-20201215213550455](新标准日本语学习笔记.assets/image-20201215213550455.png)
+1. 简体与敬体
+2. 省略
+   1. 疑问句时可以省略 か
+      - おいしいですか。　おいしい？
+   2. 使用简体时，经常省略 だ，特别是女性
+      - 明日雨ですか。　明日雨？
+      - 今暇ですよ。　今暇よ。
+   3. 不会产生歧义的助词，经常被省略
+      - 何を食べたいですか。　何を食べたい？
+      - 今病院へ行きます。　今病院行く。
+   4.  ～ています　的简体 ～ている　中，经常省略 い，只用～てる 
+      1. 何をしていますか。　何してる？
+      2. テレビを見ています。　テレビ見る。
+3. 其它表达
+   1. 自言自语
+      - 明日雨かな。
+   2. 如果对方在场时，则表达自己对这个信息也不十分确定
+      - 銀行は今日休みかな。
+   3. 对方在场时，向对方提出委婉的请求
+      - 森君、こね、コピーしてくねるかな。
+   4. 对方在场时，表达一种不太同意对方观点，不太相信对方的话，但是也不想为此争论的语气。“是么？”“…么？”
+      - ディズコーランド、おま白いかな。
+      - へえ？おいしいかな。
+      - 本当かな。
+   5. の　解释说明
+      - そんなにまずいの？
+      - 今勉強してるの。
+   6. ～って　引用，传闻
+      - 旅行って、とこへ行く？
+   7. ～けど、～　表示转折「～が、～」的口语体
+      - 早く出かけましたが、遅刻しました。
 
 **尽量使用简体练习对话**
 
