--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1693,7 +1693,7 @@ sone when
 
 列举反义词时为交替
 
-加名词是, 说不准的意思
+加名词是 说不准的意思
 
 ![image-20201215224806689](新标准日本语学习笔记.assets/image-20201215224806689.png)
 
