--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1949,8 +1949,6 @@ sone when
 
 ![image-20201218173409658](新标准日本语学习笔记.assets/image-20201218173409658.png)
 
-
-
 ### 总复习三: N5模拟题
 
 第七单元
@@ -1963,9 +1961,15 @@ sone when
 
 #### 1.连体修饰-定语从句
 
+动词简体+名词，作定语
+
+不用敬体，不能加の
+
 ![image-20201219205148974](新标准日本语学习笔记.assets/image-20201219205148974.png)
 
 #### 2.定语从句当名词使用
+
+动词简体+名词+　は～です，作主语
 
 ![image-20201219215400956](新标准日本语学习笔记.assets/image-20201219215400956.png)
 
