--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -1959,27 +1959,62 @@ sone when
 
 ### 第二十五课 这是明天会议要用的资料
 
-#### 1.连体修饰-定语从句
+#### 1.动词简体+名词
 
-动词简体+名词，作定语
+动词简体做定语修饰名词。
 
 不用敬体，不能加の
 
-![image-20201219205148974](新标准日本语学习笔记.assets/image-20201219205148974.png)
+1. この電車は**奈良に着く**電車です。
+   - 这个电车是到奈良的电车。
+2. 彼は**私が知らない**人です。
+   - 他是我不认识的人。
+3. これは**たくさんの人に使われている**辞書です。
+   - 这是被很多人用的字典。
 
-#### 2.定语从句当名词使用
+#### 2.动词简体+名　は～です
 
-动词简体+名词+　は～です，作主语
+定语从句当名词使用
 
-![image-20201219215400956](新标准日本语学习笔记.assets/image-20201219215400956.png)
+1. 日本語が**できる**人はいますか。
+   - 有会日语的人吗？
+2. 昨日教室を**掃除した**人は私です。
+   - 昨天打扫了教室的人是我
+3. 白いシャツを**着ている人**は先生です。
+4. 私が**明日乗る飛行機**は中国航空です。
+   - 我明天要做的飞机是中国航空
+5. 小野さんが**作る料理**はおいしいです。
+6. 森さんが**買った本**はこれです。
 
-![image-20201219224703456](新标准日本语学习笔记.assets/image-20201219224703456.png)
+#### 3.动词简体+名词　と／に／から／　～动词ます
 
-#### 3.连体修饰 形容词/名词修饰名词
+连体修饰 形容词/名词修饰名词
 
-![image-20201219233658136](新标准日本语学习笔记.assets/image-20201219233658136.png)
+- 动词修饰的名词小句可以放入其他句中组合使用。
+- 修饰名词的动词小句中主语用が来提示
 
-![image-20201220004102608](新标准日本语学习笔记.assets/image-20201220004102608.png)
+1. 日本で**買った葉書を友達に**贈りました。
+   - 把在日本买的明信片送给了朋友。
+2. 大阪へ**転勤した友達から**手紙が来ました。
+
+
+
+修饰名词的动词小句中，主语が用来提示。
+
+1. 私**が**知らない人から手紙が来ました。
+   - 我不认识的人给我写了一封信。
+2. 森さん**が**買った本。
+
+#### 4.小句（形/形動/名）+名。
+
+形容词等修饰的名词小句　可以放入其他句中组合使用，形容词修饰名词时不加 の。
+
+1. 緑が**多い**町に住みたいです。
+2. 種類が**豊富な**スーパーに行きました。
+3. 日本語が**専門な**人はいますか。
+4. **入口が広い**あの建物が私の会社です。
+5. **操作が簡単な**パソコンが欲しいです。
+6. **数学が専門の**先生が休みました。
 
 
 
