--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -2020,15 +2020,57 @@ sone when
 
 ### 第二十六课 骑自行车带人很危险
 
-#### 1.
+#### 1.动词小句+ のは～です
 
-#### 2.
+动词小句加“**の**”使其名词化，表示“<u>做某动作</u>”的意思。
 
-#### 3.
+1. 日本に留学する**のは**私の目的**です**。
+2. 自分で料理を作る**のは**面白い**です**。
+3. 彼と生活する**のは**幸せ**です**。
 
-#### 4.
+#### 2.动词小句+ のが～です
 
+动词句名词化用于<u>好恶、水平高低</u>时，要用助词**が**。
 
+1. 鈴木さんは絵を描く**のが**好き**です**。
+2. 私は魚を食べる**のが**嫌い**です**。
+3. 山田さんは写真を撮る**のが**上手**です**。
+
+#### 3.动词小句+ のを ＋动
+
+动词小句加“の”的名词化形式，还可以做<u>宾语</u>。
+
+直接作用于动作对象的动词，使用“の”。
+
+1. 手紙を出す**のを**忘れました。
+2. 森さんが発言する**のを**聞きました。
+
+“**の**”和“**こと**”可以互换：名词化形式做宾语时。
+
+1. 手紙を出すことを忘れました。
+2. 李さんは部長に報告するの（こと）を忘れました。
+
+要用**こと**：句尾的动词是“**知らせます／伝えます／話します**”等表示<u>语言行为</u>的动词时。
+
+#### 4.动词小句（简体）でしょう「推测」
+
+表示说话人对自已和听话人都不能断定的事情进行推测。70%可能性时使用。
+
+1. 明日から天気が良くなる**でしょう**。
+2. そのこと、みんな知らない**でしょう**。
+3. このカメラはたぶん高い**でしょう**。
+4. 今年はたぶん豊作**だろう**。（可以完全互换）
+5. これはたぶん誰かの忘れ物**だろう**。
+6. 会議はもう終わった**だろう**。
+
+#### 5.动词小句（简体）かもしれません／かもしれない
+
+表示有可能发生某事，其可能性一般为50%左右。
+
+1. 来週日本に出張する**かもしれません**。
+2. この小説は面白い**かもしれません**。
+3. そこはきれい**かもしれません**。
+4. 明日は雨降るかもしれませんが、降らないかもしれません。
 
 ### 第二十七课 我小时候发生过大地震
 
