--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -2076,11 +2076,11 @@ sone when
 
 #### 1.小句（简体）+時 ~时候
 
-#### 2.
+#### 2.动词连用形　+　ながら
 
-#### 3.
+#### 3.小句（简体）　+　でしょう
 
-#### 4.
+#### 4.动　ています　可表示时间起点时使用
 
 
 
