--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -2074,13 +2074,34 @@ sone when
 
 ### 第二十七课 我小时候发生过大地震
 
-#### 1.小句（简体）+時 ~时候
+#### 1.小句（简体）+時 
+
+~时候
 
 #### 2.动词连用形　+　ながら
 
+一边～一边～
+
+
 #### 3.小句（简体）　+　でしょう
 
-#### 4.动　ています　可表示时间起点时使用
+表示征求同意，读升调
+
+
+
+#### 4.动～ています　
+
+可表示时间起点时使用
+
+表示反复或习惯性的动作
+
+#### 5.名　+　で
+
+助词で加在名词后面还可以表示原因、理由。
+
+#### 6.名　＋　と会います
+
+可表示互动行为的动词时，进行同一动作的另一方要用“と”来表示。
 
 
 
