--- a/新标准日本语学习笔记-ミカ先生.md
+++ b/新标准日本语学习笔记-ミカ先生.md
@@ -2072,30 +2072,67 @@ sone when
 3. そこはきれい**かもしれません**。
 4. 明日は雨降るかもしれませんが、降らないかもしれません。
 
+
+
 ### 第二十七课 我小时候发生过大地震
 
-#### 1.小句（简体）+時 
+#### 1.动词小句（简体）+時 
 
 ~时候
+
+①小句是名词时：名词+「の」十時
+
+②小句是形容词：一类形容词 简体+時
+
+③小句是形容词：二类形容词　+な+時
+
+④小句是动词时：动词基本形/した形+時
+
+| 分类                       | 示例           |
+| -------------------------- | -------------- |
+| 名詞（めいし）             | 授業**の**時   |
+| 形容詞（けいようし）       | 忙し**い**時   |
+| 形容動詞（けいようどうし） | 暇**な**時     |
+| 動詞（どうし）             | 旅行**する**時 |
+
+
 
 #### 2.动词连用形　+　ながら
 
 一边～一边～
 
+表示同一个主体同时进行两个动作，后面的动作是主要动作。
 
-#### 3.小句（简体）　+　でしょう
+**去掉ます**就是连用形。
+
+
+
+
+#### 3.小句（简体）　+　でしょう？
 
 表示征求同意，读升调
 
+
+
 #### 4.动～ています　
 
-可表示时间起点时使用
+可表示时间起点时使用，表示反复或习惯性的动作
 
-表示反复或习惯性的动作
+- 私は毎日散歩しています。
+  - 我每天散步【习惯】
+- 葉子さんはアルバイトをしながら、学校に通っています。
+  - 叶子边打工边上学。【反复】
+
+表示时间起点时使用。（只能表示从现在到将来的时间段）
+
+- 私は先月から毎朝太極拳をしています。
+  - 我从上个月起每天早上打太极拳。
 
 #### 5.名　+　で
 
 助词で加在名词后面还可以表示原因、理由。
+
+
 
 #### 6.名　＋　と会います
 
